BUG: Correct locate libelastix.so call.

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -136,16 +136,16 @@ jobs:
         ninja
       shell: cmd
 
-#     - name: Build SimpleElastix Unix
-#       if: matrix.os != 'windows-2019'
-#       run: |
-#         ls
-#         ls ITK-build
-#         locate libelastix.so
-#         mkdir SimpleElastix-build
-#         cd SimpleElastix-build
-#         cmake -DWRAP_LUA:BOOL=OFF -DWRAP_PYTHON:BOOL=ON -DWRAP_JAVA:BOOL=OFF -DWRAP_CSHARP:BOOL=OFF -DWRAP_TCL:BOOL=OFF -DWRAP_R:BOOL=OFF -DWRAP_RUBY:BOOL=OFF -DBUILD_EXAMPLES:BOOL=ON -DBUILD_TESTING:BOOL=OFF -DCMAKE_CXX_FLAGS=-w -DCMAKE_C_FLAGS=-w -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DSimpleITK_USE_SYSTEM_ITK:BOOL=ON -DITK_DIR=${{ matrix.ITK_BUILD_DIR }} -DSimpleITK_USE_SYSTEM_ELASTIX:BOOL=ON -DElastix_DIR=${{ matrix.ELX_BUILD_DIR }} -DSimpleITK_4D_IMAGES:BOOL=OFF -GNinja ../SuperBuild
-#         ninja 
+    - name: Build SimpleElastix Unix
+      if: matrix.os != 'windows-2019'
+      run: |
+        ls
+        ls ITK-build
+        locate libelastix.so
+        mkdir SimpleElastix-build
+        cd SimpleElastix-build
+        cmake -DWRAP_LUA:BOOL=OFF -DWRAP_PYTHON:BOOL=ON -DWRAP_JAVA:BOOL=OFF -DWRAP_CSHARP:BOOL=OFF -DWRAP_TCL:BOOL=OFF -DWRAP_R:BOOL=OFF -DWRAP_RUBY:BOOL=OFF -DBUILD_EXAMPLES:BOOL=ON -DBUILD_TESTING:BOOL=OFF -DCMAKE_CXX_FLAGS=-w -DCMAKE_C_FLAGS=-w -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DSimpleITK_USE_SYSTEM_ITK:BOOL=ON -DITK_DIR=${{ matrix.ITK_BUILD_DIR }} -DSimpleITK_USE_SYSTEM_ELASTIX:BOOL=ON -DElastix_DIR=${{ matrix.ELX_BUILD_DIR }} -DSimpleITK_4D_IMAGES:BOOL=OFF -GNinja ../SuperBuild
+        ninja 
         
 #     - name: Build SimpleElastix Unix
 #       if: matrix.os == 'windows-2019'
