CI: Point cmake to bin directory elastix

--- a/UseSimpleITK.cmake.in
+++ b/UseSimpleITK.cmake.in
@@ -4,7 +4,7 @@
 # included directly, but rather through the SimpleITK_USE_FILE setting
 # obtained from SimpleITKConfig.cmake.
 #
-set(Elastix_BUILD_DIR "@Elastix_DIR@/Elastix-build")
+set(Elastix_BUILD_DIR "${Elastix_DIR}/bin")
 
 # Add include directories needed to use SimpleITK.
 include_directories(${SimpleITK_INCLUDE_DIRS})
