--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        os: [macos-10.15]
+        os: [ubuntu-18.04]
         # os: [macos-10.15, ubuntu-18.04, windows-2019]
         include:
 #           - os: ubuntu-18.04
