CI:Correct Ubuntu Build

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -16,19 +16,19 @@ jobs:
         os: [ubuntu-18.04]
         # os: [macos-10.15, ubuntu-18.04, windows-2019]
         include:
-#           - os: ubuntu-18.04
-#             c-compiler: "gcc"
-#             cxx-compiler: "g++"
-#             itk-git-tag: "v5.1.2"
-#             elastix-git-tag: "5.0.1"
-#             cmake-build-type: "Release"
-#             ANNLib: "libANNlib-5.0.so"
-#             ANNLib2: "libANNlib-5.0.so.1"
-#             ITK_SOURCE_DIR: ../ITK-source
-#             ITK_BUILD_DIR: ../ITK-build
-#             ELX_SOURCE_DIR: ../Elastix-source
-#             ELX_BUILD_DIR: ../Elastix-build
-#             random_nr: 1
+          - os: ubuntu-18.04
+            c-compiler: "gcc"
+            cxx-compiler: "g++"
+            itk-git-tag: "v5.1.2"
+            elastix-git-tag: "5.0.1"
+            cmake-build-type: "Release"
+            ANNLib: "libANNlib-5.0.so"
+            ANNLib2: "libANNlib-5.0.so.1"
+            ITK_SOURCE_DIR: ../ITK-source
+            ITK_BUILD_DIR: ../ITK-build
+            ELX_SOURCE_DIR: ../Elastix-source
+            ELX_BUILD_DIR: ../Elastix-build
+            random_nr: 1
           # - os: windows-2019
           #   c-compiler: "cl.exe"
           #   cxx-compiler: "cl.exe"
@@ -41,19 +41,19 @@ jobs:
           #   ELX_SOURCE_DIR: ../Elastix-source
           #   ELX_BUILD_DIR: ../Elastix-build
           #   random_nr: 1
-          - os: macos-10.15
-            c-compiler: "clang"
-            cxx-compiler: "clang++"
-            itk-git-tag: "v5.1.2"
-            elastix-git-tag: "5.0.1"
-            cmake-build-type: "Release"
-            ANNLib: "libANNlib-5.0.1.dylib"
-            ANNLib2: "libANNlib-5.0.dylib"
-            ITK_SOURCE_DIR: ../ITK-source
-            ITK_BUILD_DIR: ../ITK-build
-            ELX_SOURCE_DIR: ../Elastix-source
-            ELX_BUILD_DIR: ../Elastix-build
-            random_nr: 1
+#           - os: macos-10.15
+#             c-compiler: "clang"
+#             cxx-compiler: "clang++"
+#             itk-git-tag: "v5.1.2"
+#             elastix-git-tag: "5.0.1"
+#             cmake-build-type: "Release"
+#             ANNLib: "libANNlib-5.0.1.dylib"
+#             ANNLib2: "libANNlib-5.0.dylib"
+#             ITK_SOURCE_DIR: ../ITK-source
+#             ITK_BUILD_DIR: ../ITK-build
+#             ELX_SOURCE_DIR: ../Elastix-source
+#             ELX_BUILD_DIR: ../Elastix-build
+#             random_nr: 1
 
 
     steps:
