--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -139,6 +139,7 @@ jobs:
     - name: Build SimpleElastix Unix
       if: matrix.os != 'windows-2019'
       run: |
+        ls Elastix-build
         mkdir SimpleElastix-build
         cd SimpleElastix-build
         cmake -DWRAP_LUA:BOOL=OFF -DWRAP_PYTHON:BOOL=ON -DWRAP_JAVA:BOOL=OFF -DWRAP_CSHARP:BOOL=OFF -DWRAP_TCL:BOOL=OFF -DWRAP_R:BOOL=OFF -DWRAP_RUBY:BOOL=OFF -DBUILD_EXAMPLES:BOOL=ON -DBUILD_TESTING:BOOL=OFF -DCMAKE_CXX_FLAGS=-w -DCMAKE_C_FLAGS=-w -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DSimpleITK_USE_SYSTEM_ITK:BOOL=ON -DITK_DIR=${{ matrix.ITK_BUILD_DIR }} -DSimpleITK_USE_SYSTEM_ELASTIX:BOOL=ON -DElastix_DIR=$PWD/../Elastix-build -DSimpleITK_4D_IMAGES:BOOL=OFF -v -GNinja ../SuperBuild
