CI: Redeclare set ( ITK_DIR "../ITK-build" ) in ITKIntegration

--- a/Examples/ITKIntegration/CMakeLists.txt
+++ b/Examples/ITKIntegration/CMakeLists.txt
@@ -1,4 +1,5 @@
 if(NOT CMAKE_PROJECT_NAME STREQUAL "SimpleITK")
+  set ( ITK_DIR "../ITK-build" )
   find_package ( ITK )
   include( ${ITK_USE_FILE} )
   find_package ( Elastix )
