--- a/Examples/ITKIntegration/CMakeLists.txt
+++ b/Examples/ITKIntegration/CMakeLists.txt
@@ -1,10 +1,10 @@
-if(NOT CMAKE_PROJECT_NAME STREQUAL "SimpleITK")
-  set ( ITK_DIR "../ITK-build" )
-  find_package ( ITK )
-  include( ${ITK_USE_FILE} )
-  find_package ( Elastix )
-  include ( ${ELASTIX_USE_FILE} )
-endif()
+##if(NOT CMAKE_PROJECT_NAME STREQUAL "SimpleITK")
+##  set ( ITK_DIR "../ITK-build" )
+##  find_package ( ITK )
+##  include( ${ITK_USE_FILE} )
+##  find_package ( Elastix )
+##  include ( ${ELASTIX_USE_FILE} )
+##endif()
 
 add_executable ( ITKIntegration ITKIntegration.cxx )
 target_link_libraries ( ITKIntegration ${SimpleITK_LIBRARIES} ${ITK_LIBRARIES} )
